--- a/app/phishing.html
+++ b/app/phishing.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Ethereum Phishing Detection - Htmlcoin Qnekt</title>
+    <title>Ethereum Phishing Detection - Htmlcoin Altmasq</title>
     <script src="./globalthis.js" type="text/javascript" charset="utf-8"></script>
     <script src="./lockdown-install.js" type="text/javascript" charset="utf-8"></script>
     <script src="./lockdown-run.js" type="text/javascript" charset="utf-8"></script>
@@ -42,8 +42,8 @@
       </div>
       <div class="content__body">
         <p>
-          This domain is currently on the Htmlcoin Qnekt domain warning list. This means that based on information available to us,
-          Htmlcoin Qnekt believes this domain could currently compromise your security and, as an added safety feature, Htmlcoin Qnekt
+          This domain is currently on the Htmlcoin Altmasq domain warning list. This means that based on information available to us,
+          Htmlcoin Altmasq believes this domain could currently compromise your security and, as an added safety feature, Htmlcoin Altmasq
           has restricted access to the site. To override this, please read the rest of this warning for instructions on how to continue at your own risk.
         </p>
         <p>
